-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.2
-
Pixel 4 Emulator API 31
-
-
9c8651478 (dev), 0eff6dfe9 (6.6), 2bcabf13b (tqtc/lts-6.5)
-
2023wk42FOQtforAndroid
Steps to reproduce
- Launch either the Widgets Gallery Example (https://doc.qt.io/qt-6/qtwidgets-gallery-example.html ) or the Qt Quick Controls - Gallery Example (https://doc.qt.io/qt-6/qtquickcontrols-gallery-example.html )
- Tap/click into a QLineEdit or TextField and start typing
- Launch a native Android app that accepts arbitrary text input (e.g. the SMS app)
- Tap/click into a native Android text field and start typing
- Compare the behaviours of Steps #2 and #4
Expected outcomes (native Android text field or Qt 5 widgets/controls)
The "teardrop" text cursor handle normally:
- Does not appear when an empty text input field gains focus
- Appears when you tap in the middle of a word/sentence in a text input field
- Disappears when you start typing, or after ~5 seconds of inactivity
Actual outcomes (Qt 6 widgets/controls)
The "teardrop" appears as soon as a text input field gains focus (even if it's empty) and it never disappears.

| For Gerrit Dashboard: QTBUG-117367 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 512577,3 | Android: Fix for hiding cursor handles | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 513877,2 | Android: Fix for hiding cursor handles | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 513940,2 | Android: Fix for hiding cursor handles | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |